--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,11 @@
-kotlinVersion=1.5.31
-springBootVersion=2.6.2
+kotlinVersion=1.6.21
+coroutineVersion=1.6.2
+springBootVersion=2.7.0
 groovyVersion=3.0.8
 spockVersion=2.0-groovy-3.0
 awsSdkVersion=2.17.100
 jacksonVersion=2.13.0
 retrofitVersion=2.9.0
+kotlinterVersion=3.10.0
+koverVersion=0.5.1
+detektVersion=1.20.0
